# optima-core-py

./: .gitignore  README.md  pyproject.toml
optima_core/: __init__.py
optima_core/config/: __init__.py  build_info.py  settings.py
optima_core/diagnostics/: __init__.py  endpoints.py  health.py  startup.py
optima_core/http/: __init__.py  client.py
optima_core/logging/: __init__.py  config.py
optima_core/tracing/: __init__.py  context.py  ids.py  middleware.py
tests/: __init__.py  conftest.py
tests/diagnostics/: __init__.py  test_endpoints.py  test_health.py  test_startup.py
tests/http/: test_client.py
tests/logging/: __init__.py  test_config.py
tests/tracing/: __init__.py  test_context.py  test_ids.py  test_middleware.py
